# waves

./: .gitignore  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cloudwatch_log_ingest.yaml  docs.yaml  docs_branch.yaml  dynamic_node_pools_gke.yaml  mdbook.yaml  mdbook_branch.yaml
docs/: book.toml
docs/build-requirements/: requirements.txt
docs/src/: CloudwatchLogIngest.md  DynamicNodePoolsGke.md  Overview.md  SUMMARY.md  conf.py  index.rst
docs/src/_static/css/: custom.css
docs/src/api/: aws.rst  cloudwatch_log_ingest.rst  dynamic_node_pools_gke.rst
waves/aws/cloudwatch_log_ingest/: .dockerignore  CloudwatchLogIngest.md  Dockerfile  pyproject.toml
waves/aws/cloudwatch_log_ingest/cloudwatch_log_ingest/: handler.py
waves/aws/cloudwatch_log_ingest/requirements/: requirements.dev.txt  requirements.test.txt  requirements.txt
waves/aws/cloudwatch_log_ingest/tests/unit/: test_handler.py
waves/aws/dynamic_node_pools_gke/: Dockerfile  DynamicNodePoolsGke.md  pyproject.toml  test.tf
waves/aws/dynamic_node_pools_gke/dynamic_node_pools_gke/: contract_structs.py  handler.py  terraform.py
waves/aws/dynamic_node_pools_gke/requirements/: requirements.txt
waves/aws/dynamic_node_pools_gke/tests/unit/: test_dynamic_node_pools.py
waves/aws/dynamic_node_pools_gke/tests/utils/: contract_utils.py
